fix bug on iphone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,6 +67,10 @@
                     padding: 8px 16px;
                     text-decoration: none;
                     border: none;
+                    appearance: none;
+                    /* bỏ style mặc định của thẻ được trình duyệt áp vào */
+                    -webkit-appearance: none;
+                    /* dành cho safari */
                 }
                 
                 .btn:hover {
